fixed spacing

--- a/src/AboutContainer/styles.css
+++ b/src/AboutContainer/styles.css
@@ -6,3 +6,7 @@ h4 {
 #about-text {
 	padding: 0px;
 }
+h3 {
+	font-style: italic;
+	font-weight: bolder;
+}
